Updated about layout

--- a/JordanDeBordProject2/Views/Home/About.cshtml
+++ b/JordanDeBordProject2/Views/Home/About.cshtml
@@ -1,16 +1,21 @@
 ﻿@{ 
     ViewData["Title"] = "About";
 }
-<div>
-    <h3>Developer Information</h3>
-    <p>
-        Name: Jordan DeBord
-        <br />
-        Email: <a href="mailto: zjad35@etsu.edu">zjad35@etsu.edu </a>
-    </p>
-    
-    <h3>Additional Application Feature</h3>
-    <p>
-        
-    </p>
+<div class="container">
+    <div class="row">
+        <div class="col-7">
+            <h4>Additional Application Feature</h4>
+            <p>
+                Temp paragraph explaining additional feature. REPLACE.
+            </p>
+        </div>
+        <div class="col-5">
+            <h4>Developer Information</h4>
+            <p>
+                Name: Jordan DeBord
+                <br />
+                Email: <a href="mailto: zjad35@etsu.edu">zjad35@etsu.edu </a>
+            </p>
+        </div>
+    </div>
 </div>
