Large Changes to backend structure.

--- a/JordanDeBordProject2/Views/Shared/_Layout.cshtml
+++ b/JordanDeBordProject2/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <!-- If logged in and not admin, link to view profile -->
+                        <partial name="_LoginNavPartial" />
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
