--- a/JordanDeBordProject2/Views/_ViewImports.cshtml
+++ b/JordanDeBordProject2/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using JordanDeBordProject2.Models
 @using JordanDeBordProject2.Models.Entities
 @using JordanDeBordProject2.Models.ViewModels
+@using JordanDeBordProject2.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
