fixed widespread issues.

--- a/JordanDeBordProject2/Views/Shared/_LoginPartial.cshtml
+++ b/JordanDeBordProject2/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    var user = userRepo.Read(User.Identity.Name);
+    var user = await userRepo.ReadAsync(User.Identity.Name);
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @user.FirstName!</a>
     </li>
