add admin crud (except create/update/delete genre) working

--- a/JordanDeBordProject2/Views/Admin/DeleteMovie.cshtml
+++ b/JordanDeBordProject2/Views/Admin/DeleteMovie.cshtml
@@ -26,5 +26,5 @@
     </form>
 </div>
 <div>
-    <a asp-action="Index">Back to Admin Movie List</a>
+    <a asp-action="Index" asp-controller="Admin">Back to Admin Movie List</a>
 </div>
