--- a/JordanDeBordProject2/Views/Admin/CreateMovie.cshtml
+++ b/JordanDeBordProject2/Views/Admin/CreateMovie.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to Admin Movie List</a>
+    <a asp-action="Index" asp-controller="Admin">Back to Admin Movie List</a>
 </div>
 
 @section Scripts {
