--- a/JordanDeBordProject2/Views/Admin/EditMovie.cshtml
+++ b/JordanDeBordProject2/Views/Admin/EditMovie.cshtml
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to Admin Movie List</a>
+    <a asp-action="Index" asp-controller="Admin">Back to Admin Movie List</a>
 </div>
 
 @section Scripts {
