--- a/JordanDeBordProject2/Views/Admin/RemoveGenre.cshtml
+++ b/JordanDeBordProject2/Views/Admin/RemoveGenre.cshtml
@@ -1,7 +1,7 @@
-﻿@model JordanDeBordProject2.Models.ViewModels.AddGenreVM
+﻿@model JordanDeBordProject2.Models.ViewModels.RemoveGenreVM
 
 @{
-    var genres = (List<Genre>)ViewData["Genres"];
+    var genres = (List<MovieGenre>)ViewData["Genres"];
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,10 +9,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddGenre">
+        <form asp-action="RemoveGenre">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
                 <input readonly asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
@@ -27,14 +26,14 @@
                 <span asp-validation-for="Genres" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewGenreId" class="control-label"></label>
-                <select asp-for="NewGenreId" class="form-control">
+                <label asp-for="GenreIdToRemove" class="control-label"></label>
+                <select asp-for="GenreIdToRemove" class="form-control">
                     @foreach (var gen in genres)
                     {
-                        <option value="@gen.Id">@gen.Name</option>
+                        <option value="@gen.Genre.Id">@gen.Genre.Name</option>
                     }
                 </select>
-                <span asp-validation-for="NewGenreId" class="text-danger"></span>
+                <span asp-validation-for="GenreIdToRemove" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
