Updates working for profile/user

--- a/JordanDeBordProject2/Views/Home/About.cshtml
+++ b/JordanDeBordProject2/Views/Home/About.cshtml
@@ -6,7 +6,9 @@
         <div class="col-7">
             <h4>Additional Application Feature</h4>
             <p>
-                Temp paragraph explaining additional feature. REPLACE.
+                My additional application feature is the introduction and implementation of genres for movies.
+                Each movie can have zero-to-many genres, and each genre can be associated with zero-to-many movies.
+                Admins can add and remove genres from movies, as well as create, update, and delete genres.
             </p>
         </div>
         <div class="col-5">
