--- a/JordanDeBordProject2/Views/Profile/Edit.cshtml
+++ b/JordanDeBordProject2/Views/Profile/Edit.cshtml
@@ -1,16 +1,30 @@
-﻿@model JordanDeBordProject2.Models.ViewModels.CreateProfileVM
+﻿@model JordanDeBordProject2.Models.ViewModels.EditProfileVM
 
-@{ 
-    var userId = ViewData["UserId"];
-}
 <h1>@ViewData["Title"]</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <input asp-for="ApplicationUserId" value="@userId" readonly hidden />
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input hidden readonly asp-for="ProfileId" class="form-control" />
+                <span asp-validation-for="ProfileId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input hidden readonly asp-for="UserId" class="form-control" />
+                <span asp-validation-for="UserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="CCNum" class="control-label"></label>
                 <input asp-for="CCNum" class="form-control" />
@@ -47,14 +61,15 @@
                 <span asp-validation-for="ZIPCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="Home">Watched Movies</a>
+    <a asp-action="Index" asp-controller="Home">Watched Movies</a> |
+    <a asp-action="Index" asp-controller="Movie">All Movies</a>
 </div>
 
 @section Scripts {
