--- a/JordanDeBordProject2/Views/Movie/Index.cshtml
+++ b/JordanDeBordProject2/Views/Movie/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@model IEnumerable<JordanDeBordProject2.Models.ViewModels.DisplayMovieHomeVM>
+﻿@model IEnumerable<JordanDeBordProject2.Models.ViewModels.DisplayMovieIndexVM>
 
 @{
-    var totalWatched = ViewData["TotalWatched"];
-    var totalSpent = (double)ViewData["TotalSpent"];
-    var formattedTotalSpent = totalSpent.ToString("C");
-
+    var totalMovies = ViewData["TotalMovies"];
 }
 
 <h1>@ViewData["Title"]</h1>
+
 
 <table class="table">
     <thead>
@@ -16,7 +14,7 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NumTimesWatched)
+                @Html.DisplayNameFor(model => model.WatchStatus)
             </th>
             <th></th>
         </tr>
@@ -28,20 +26,18 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NumTimesWatched)
+                @Html.DisplayFor(modelItem => item.WatchStatus)
             </td>
             <td>
                 <a asp-action="Details" asp-controller="Movie" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Watch" asp-controller="Movie" asp-route-id="@item.Id">Watch Again</a>
+                <a asp-action="Watch" asp-controller="Movie" asp-route-id="@item.Id">Watch</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
-<hr />
 <div>
     <p>
-        Count of movies watched: @totalWatched
-        Total money spent watching movies: @formattedTotalSpent
+        Total Movies: @totalMovies
     </p>
 </div>
