updates to movie display

--- a/JordanDeBordProject2/Views/Home/Index.cshtml
+++ b/JordanDeBordProject2/Views/Home/Index.cshtml
@@ -9,6 +9,9 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<div>
+    <a asp-action="Index" asp-controller="Movie">All Movies</a>
+</div>
 <table class="table">
     <thead>
         <tr>
