Widespread Changes to all controllers.

--- a/JordanDeBordProject2/Views/Admin/Index.cshtml
+++ b/JordanDeBordProject2/Views/Admin/Index.cshtml
@@ -5,7 +5,8 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="CreateMovie">Create Movie</a>
+    <a asp-action="CreateMovie">Create Movie</a> | 
+    <a asp-action="Index" asp-controller="Genre">Genre Administration</a>
 </p>
 <table class="table">
     <thead>
