--- a/JordanDeBordProject2/Views/Shared/_LoginNavPartial.cshtml
+++ b/JordanDeBordProject2/Views/Shared/_LoginNavPartial.cshtml
@@ -5,6 +5,6 @@
 @if (User.IsInRole("Movie Connoisseur"))
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Details">View Profile</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Profile" asp-action="Details">View Profile</a>
     </li>
 }
