--- a/JordanDeBordProject2/Views/Movie/Index.cshtml
+++ b/JordanDeBordProject2/Views/Movie/Index.cshtml
@@ -6,7 +6,9 @@
 
 <h1>@ViewData["Title"]</h1>
 
-
+<div>
+    <a asp-action="Index" asp-controller="Home">Watched Movies</a>
+</div>
 <table class="table">
     <thead>
         <tr>
