--- a/JordanDeBordProject2/Views/Profile/Create.cshtml
+++ b/JordanDeBordProject2/Views/Profile/Create.cshtml
@@ -1,16 +1,22 @@
 ﻿@model JordanDeBordProject2.Models.ViewModels.CreateProfileVM
 
-@{ 
-    var userId = ViewData["UserId"];
-}
+
 <h1>@ViewData["Title"]</h1>
 
 <hr />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <form asp-action="Create">
-            <input asp-for="ApplicationUserId" value="@userId" readonly hidden />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input hidden readonly asp-for="ApplicationUserId" class="form-control" />
+                <span asp-validation-for="ApplicationUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input readonly asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="CCNum" class="control-label"></label>
                 <input asp-for="CCNum" class="form-control" />
@@ -20,11 +26,6 @@
                 <label asp-for="CCExp" class="control-label"></label>
                 <input asp-for="CCExp" class="form-control" />
                 <span asp-validation-for="CCExp" class="text-danger"></span>
-            </div>
-            <div class="text-sm-left">
-                <p>
-                    Note: If your card does not have a day, choose the last day of that month.
-                </p>
             </div>
             <div class="form-group">
                 <label asp-for="AddLine1" class="control-label"></label>
