--- a/JordanDeBordProject2/Views/Shared/_LoginPartial.cshtml
+++ b/JordanDeBordProject2/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 {
     var user = await userRepo.ReadAsync(User.Identity.Name);
     <li class="nav-item">
-        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @user.FirstName!</a>
+        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @user.FirstName</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
