Final functionality updates.

--- a/JordanDeBordProject2/Views/Home/About.cshtml
+++ b/JordanDeBordProject2/Views/Home/About.cshtml
@@ -5,14 +5,20 @@
     <div class="row">
         <div class="col-7">
             <h4>Additional Application Feature</h4>
+            <hr />
             <p>
-                My additional application feature is the introduction and implementation of genres for movies.
-                Each movie can have zero-to-many genres, and each genre can be associated with zero-to-many movies.
+                My additional application feature is the introduction and implementation of genres for movies. 
+                Each movie can have zero-to-many genres, and each genre can be associated with zero-to-many movies. 
                 Admins can add and remove genres from movies, as well as create, update, and delete genres.
+            </p>
+            <p>
+                Users are able to browse movies by genre. They can then link to the movies details page or choose to watch 
+                the movie from that page.
             </p>
         </div>
         <div class="col-5">
             <h4>Developer Information</h4>
+            <hr />
             <p>
                 Name: Jordan DeBord
                 <br />
