--- a/JordanDeBordProject2/Views/Movie/Details.cshtml
+++ b/JordanDeBordProject2/Views/Movie/Details.cshtml
@@ -30,6 +30,12 @@
         <dd class = "col-sm-10">
             @Model.Price.ToString("C")
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Genres)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Genres)
+        </dd>
     </dl>
 </div>
 <div>
