--- a/JordanDeBordProject2/Views/Admin/MovieDetails.cshtml
+++ b/JordanDeBordProject2/Views/Admin/MovieDetails.cshtml
@@ -51,6 +51,7 @@
 </div>
 <div>
     <a asp-action="EditMovie" asp-route-id="@Model.Id">Edit Movie</a> |
+    <a asp-action="DeleteMovie" asp-route-id="@Model.Id">Delete Movie</a> |
     <a asp-action="Index">Back to Admin Movie List</a>
 </div>
 <div>
