--- a/JordanDeBordProject2/Views/Genre/Delete.cshtml
+++ b/JordanDeBordProject2/Views/Genre/Delete.cshtml
@@ -2,12 +2,15 @@
 
 
 <h3>Are you sure you want to delete genre @Model.GenreName?</h3>
+<br />
 <h5>If so, choose 'Yes, Delete!' below.</h5>
 <div>
     <hr />
     
     <form asp-action="Delete">
-        <input type="submit" value="Yes, Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to Admin Genre List</a>
+        <input type="submit" value="Yes, Delete!" class="btn btn-danger" />
     </form>
+</div>
+<div>
+    <a asp-action="Index">Back to Admin Genre List</a>
 </div>
