Updated for clarity.

--- a/JordanDeBordProject2/Views/Home/Index.cshtml
+++ b/JordanDeBordProject2/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
         Total number of movies watched: @totalMovies
     </p>
     <p>
-        Count of movies watched: @totalWatched
+        Number of times you have watched movies: @totalWatched
     </p>
     <p>
         Total money spent watching movies: @formattedTotalSpent
