--- a/JordanDeBordProject2/Views/Profile/Edit.cshtml
+++ b/JordanDeBordProject2/Views/Profile/Edit.cshtml
@@ -77,8 +77,8 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="Home">Watched Movies</a> |
-    <a asp-action="Index" asp-controller="Movie">All Movies</a>
+    <a asp-action="Index" asp-controller="Movie">All Movies</a> | 
+    <a asp-action="Index" asp-controller="Home">Watched Movies</a>
 </div>
 
 @section Scripts {
